--- a/github.ipynb
+++ b/github.ipynb
@@ -19,7 +19,7 @@
         "colab_type": "text"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/fumiho28/colab_sample/blob/main/github.ipynb)"
+        "<a href="https://colab.research.google.com/github/fumiho28/colab_sample/blob/main/github.ipynb" target="_parent"><img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab"/></a>"
       ]
     },
     {
